k8s-specifications/ingress/email-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email-site-service
                port:
                  number: 80
